tests/baselines/reference/parserES5ForOfStatement4.errors.txt
parserES5ForOfStatement4.ts(1,10): error TS1190: The variable declaration of a 'for...of' statement cannot have an initializer.
parserES5ForOfStatement4.ts(1,19): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement4.ts (2 errors) ====
    for (var a = 1 of X) {
             ~
!!! error TS1190: The variable declaration of a 'for...of' statement cannot have an initializer.
                      ~
!!! error TS2304: Cannot find name 'X'.
    }